Improved Weather Effects

--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -4,12 +4,12 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<meta charset="utf-8">
 	<title>M.A.C.S.</title>
-	<link rel="stylesheet" href="styles/themes/default.css?v=0.1">
-	<link rel="stylesheet" href="styles/base.css?v=0.2">
-	<link rel="stylesheet" href="styles/moods.css?v=0.2">
-	<link rel="stylesheet" href="styles/weather.css?v=0.2">
-	<script src="scripts/moods.js?v=0.2" defer></script>
-	<script src="scripts/assist-bridge.js" defer></script>
+	<link rel="stylesheet" href="styles/themes/default.css?v=0.2.0">
+	<link rel="stylesheet" href="styles/base.css?v=0.2.0">
+	<link rel="stylesheet" href="styles/moods.css?v=0.2.0">
+	<link rel="stylesheet" href="styles/weather.css?v=0.2.4">
+	<script src="scripts/moods.js?v=0.2.0" defer></script>
+	<script src="scripts/assist-bridge.js?v=0.2.1" defer></script>
 </head>
 
 <body class="mood-idle weather-none">
@@ -190,14 +190,14 @@
 
 			<!-- FX layers -->
 			<svg class="fx fx-rain" viewBox="0 0 1000 1000" preserveAspectRatio="none">
-				<ellipse class="drop" cx="200" cy="100" rx="10" ry="24"/>
-				<ellipse class="drop d2" cx="360" cy="40" rx="10" ry="24"/>
-				<ellipse class="drop d3" cx="520" cy="140" rx="10" ry="24"/>
-				<ellipse class="drop d2" cx="680" cy="60" rx="10" ry="24"/>
-				<ellipse class="drop d3" cx="820" cy="120" rx="10" ry="24"/>
-				<ellipse class="drop" cx="260" cy="220" rx="10" ry="24"/>
-				<ellipse class="drop d2" cx="460" cy="260" rx="10" ry="24"/>
-				<ellipse class="drop d3" cx="740" cy="240" rx="10" ry="24"/>
+				<ellipse class="drop" cx="200" cy="100" rx="5" ry="24"/>
+				<ellipse class="drop d2" cx="360" cy="40" rx="5" ry="24"/>
+				<ellipse class="drop d3" cx="520" cy="140" rx="5" ry="24"/>
+				<ellipse class="drop d2" cx="680" cy="60" rx="5" ry="24"/>
+				<ellipse class="drop d3" cx="820" cy="120" rx="5" ry="24"/>
+				<ellipse class="drop" cx="260" cy="220" rx="5" ry="24"/>
+				<ellipse class="drop d2" cx="460" cy="260" rx="5" ry="24"/>
+				<ellipse class="drop d3" cx="740" cy="240" rx="5" ry="24"/>
 			</svg>
 
 			<svg class="fx fx-wind" viewBox="0 0 1000 1000" preserveAspectRatio="none">
@@ -208,13 +208,12 @@
 			</svg>
 
 			<svg class="fx fx-hot" viewBox="0 0 1000 1000" preserveAspectRatio="none">
-				<path class="shimmer" d="M180 220 C260 180 340 260 420 220 C500 180 580 260 660 220 C740 180 820 260 900 220" stroke="rgba(200,245,255,0.35)" stroke-width="10" fill="none"/>
 				<ellipse class="sweat" cx="340" cy="260" rx="14" ry="22"/>
 				<ellipse class="sweat" cx="660" cy="280" rx="12" ry="20" style="animation-delay:1.1s"/>
 			</svg>
 
 			<svg class="fx fx-cold" viewBox="0 0 1000 1000" preserveAspectRatio="none">
-				<ellipse class="breath" cx="500" cy="620" rx="60" ry="30"/>
+				<ellipse class="breath" cx="300" cy="370" rx="60" ry="30"/>
 			</svg>
 
 		</div> <!-- char -->
