Working iframe snowflakes

--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -198,6 +198,17 @@
 			<g id="rain-drops"></g>
 		</svg>
 
+		<svg class="fx fx-snow" viewBox="0 0 1000 1000" preserveAspectRatio="none">
+			<defs>
+				<radialGradient id="snowFlakeGradient" cx="50%" cy="50%" r="50%">
+					<stop offset="0%" stop-color="#ffffff" stop-opacity="0.9"/>
+					<stop offset="70%" stop-color="#ffffff" stop-opacity="0.6"/>
+					<stop offset="100%" stop-color="#ffffff" stop-opacity="0"/>
+				</radialGradient>
+			</defs>
+			<g id="snow-flakes"></g>
+		</svg>
+
 		<svg class="fx fx-wind" viewBox="0 0 1000 1000" preserveAspectRatio="none">
 			<line class="streak" x1="60" y1="260" x2="260" y2="220"/>
 			<line class="streak s2" x1="120" y1="420" x2="360" y2="380"/>
