Add weather conditions as query params

--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -5,12 +5,12 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<link rel="icon" type="image/x-icon" href="images/favicon.png">
 	<title>M.A.C.S.</title>
-	<link rel="stylesheet" href="styles/themes/default.css?v=0.4.0">
-	<link rel="stylesheet" href="styles/base.css?v=0.4.0">
-	<link rel="stylesheet" href="styles/moods.css?v=0.4.0">
-	<link rel="stylesheet" href="styles/weather.css?v=0.4.0.1">
-	<script type="module" src="scripts/moods.js?v=0.4.0.8" defer></script>
-	<script type="module" src="scripts/assist-bridge.js?v=0.4.0" defer></script>
+	<link rel="stylesheet" href="styles/themes/default.css">
+	<link rel="stylesheet" href="styles/base.css">
+	<link rel="stylesheet" href="styles/moods.css">
+	<link rel="stylesheet" href="styles/weather.css">
+	<script type="module" src="scripts/moods.js" defer></script>
+	<script type="module" src="scripts/assist-bridge.js" defer></script>
 </head>
 
 <body class="mood-idle weather-none">
@@ -232,6 +232,6 @@
 	</div> <!-- stage -->
 
 	<div id="messages">Error - Unable to connect</div>
-	<div id="debug"><h1>Debugging</h1></div>
+	<div id="debug"></div>
 </body>
 </html>
