Added icicles and scarf when he's cold :)

--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -137,9 +137,11 @@
 			
 				<!-- === LEFT EYE === -->
 					<g id="leftEye" transform="translate(-10 0)">
+					<!-- Icicles -->
+						<image class="icicle icicle-left" href="images/weather/icicles/icicles-l.png" x="95" y="330" width="170" height="120" preserveAspectRatio="xMidYMin meet"/>
 					<!-- Eye Bezel -->
 						<g id="eyeBezelL">
-							<rect class="bezel-glow" x="80" y="170" width="200" height="180" rx="80" fill="url(#bezelDark)"/>
+							<rect x="80" y="170" width="200" height="180" rx="80" fill="url(#bezelDark)"/>
 							<rect x="85" y="170" width="200" height="180" rx="80" fill="url(#bezelMetal)"/>
 							<rect x="94" y="173" width="190" height="174" rx="80" fill="#000000"/>
 						</g>
@@ -168,9 +170,11 @@
 
 				<!-- === RIGHT EYE === -->
 					<g id="rightEye" transform="translate(10 0)">
+					<!-- Icicles -->
+						<image class="icicle icicle-right" href="images/weather/icicles/icicles-r.png" x="335" y="320" width="170" height="120" preserveAspectRatio="xMidYMin meet"/>
 					<!-- Eye Bezel -->
 						<g id="eyeBezelR">
-							<rect class="bezel-glow" x="320" y="170" width="200" height="180" rx="80" fill="url(#bezelDark)"/>
+							<rect x="320" y="170" width="200" height="180" rx="80" fill="url(#bezelDark)"/>
 							<rect x="315" y="170" width="200" height="180" rx="80" fill="url(#bezelMetal)"/>
 							<rect x="317" y="173" width="190" height="174" rx="80" fill="#000000"/>
 						</g>
@@ -216,6 +220,9 @@
 						<circle class="mouth" id="mouth-surprised" cx="300" cy="360" r="20"/>
 						<path class="mouth" id="mouth-thinking" d="M250 402 340 408"/>
 					</g>
+
+				<!-- Scarf -->
+					<image class="scarf" href="images/weather/scarf.png" x="0" y="320" width="600" height="300" preserveAspectRatio="xMidYMin meet"/>
 
 				<!-- Cheeks / Blush -->
 					<!-- 
