Fullscreen browser Kiosk Updated some of Macs's expressions

--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -219,7 +219,7 @@
 
 				<!-- Mouth -->
 					<g id="mouth">
-						<path class="mouth" id="mouth-bored" d="M245 370 Q300 370 355 373"/>
+						<path class="mouth" id="mouth-bored" d="M245 370 Q300 370 355 362"/>
 						<path class="mouth" id="mouth-confused" d="M240 410 Q270 395 300 410 T360 410"/>
 						<path class="mouth" id="mouth-happy" d="M250 370 A70 80 0 0 0 350 370 A60 20 0 0 1 250 370 Z"/>
 						<path class="mouth" id="mouth-idle" d="M240 400 Q300 410 360 400"/>
@@ -227,7 +227,7 @@
 						<path class="mouth" id="mouth-sad" d="M245 370 Q300 360 355 370"/>
 						<path class="mouth" id="mouth-sleeping" d="M255 350 Q300 356 345 350"/>
 						<circle class="mouth" id="mouth-surprised" cx="300" cy="360" r="20"/>
-						<path class="mouth" id="mouth-thinking" d="M250 402 340 408"/>
+						<path class="mouth" id="mouth-thinking" d="M270 370 Q 330 380 360 360"></path>
 					</g>
 
 				<!-- Scarf -->
