themes playing with shapes

--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -159,6 +159,8 @@
 							<rect x="85" y="170" width="200" height="180" rx="80" fill="url(#bezelMetal)"/>
 							<rect x="94" y="173" width="190" height="174" rx="80" fill="#000000"/>
 						</g>
+						<!-- Eyelashes (hidden by default) -->
+						<path class="eyelash" style="display: none;" d="M94,200 C120,165 180,165 210,180 L195,175 M165,165 L160,155 M130,165 L135,155" />
 					<!-- Eye Ball -->
 						<g class="eyeball blink">
 							<!-- Sclera (White part) -->
@@ -192,6 +194,8 @@
 							<rect x="315" y="170" width="200" height="180" rx="80" fill="url(#bezelMetal)"/>
 							<rect x="317" y="173" width="190" height="174" rx="80" fill="#000000"/>
 						</g>
+						<!-- Eyelashes (hidden by default) -->
+						<path class="eyelash" style="display: none;" d="M507,200 C480,165 420,165 390,180 L405,175 M435,165 L440,155 M470,165 L465,155" />
 					<!-- Eye Ball -->
 						<g class="eyeball blink">
 							<g class="sclera">
