--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -231,7 +231,7 @@ opacity: 1;
 vector-effect: none;
 fill: #d3cbcb;
 stroke-linecap: round;
-transform: scale(1.83) rotate(10.3deg) translateX(100px) translateY(102px);
+transform: scale(-1) scale(1.83) rotate(10.3deg) translateX(100px) translateY(102px);
 transform-origin: center;
 " d="m 61.556922,129.13801
 v 5.1e-4
