--- a/custom_components/macs/www/macs.html
+++ b/custom_components/macs/www/macs.html
@@ -160,37 +160,19 @@
 							<rect x="94" y="173" width="190" height="174" rx="80" fill="#000000"/>
 						</g>
 						<!-- Eyelashes (hidden by default) -->
-						<path class="eyelash" style="
-display: block;
-opacity: 1;
-vector-effect: none;
-fill: #d3cbcb;
-stroke-linecap: round;
-transform: scale(1.83) rotate(10.3deg) translateX(100px) translateY(102px);
-transform-origin: center;
-" d="m 61.556922,129.13801
-v 5.1e-4
-a 2,2 0 0 0 -1.412317,0.58963 2,2 0 0 0 0.01188,2.82825
-l 17.201532,17.07855
-c -1.98301,1.01223 -3.91786,2.10428 -5.79551,3.27887
-a 2,2 0 0 0 -0.13694,-0.1509
-L 53.398763,134.86685
-a 2,2 0 0 0 -2.828251,0.0119 2,2 0 0 0 0.0098,2.82825
-l 17.592211,17.4625
-c -1.80546,1.27765 -3.5485,2.63986 -5.22087,4.08916
-L 45.060771,141.49591
-a 2,2 0 0 0 -1.415934,-0.58033 2,2 0 0 0 -1.412317,0.59015 2,2 0 0 0 0.0098,2.8298
-l 17.767391,17.63665
-c -2.267488,2.22655 -4.379236,4.63531 -6.310209,7.2347
-a 1.4,1.4 0 0 0 0.288871,1.95698 1.4,1.4 0 0 0 1.956987,-0.28938
-c 12.692584,-17.08617 33.797574,-25.72294 55.535112,-28.19312 15.21165,-1.72859 30.64622,-0.36176 43.60354,3.09749
-a 1.4,1.4 0 0 0 0.29507,0.59015
-l 15.00012,4.99969 1.07022,-2.57969
-c -11.50044,-5.75022 -27.13923,-9.29966 -43.63093,-9.64695 -5.49723,-0.11576 -11.08867,0.12564 -16.65428,0.75809 -10.35145,1.1763 -20.623178,3.72163 -29.989388,7.90959
-a 2,2 0 0 0 -0.17466,-0.19688
-l -18.02526,-17.89452
-a 2,2 0 0 0 -1.418,-0.58032
-z"></path>
+						<path class="eyelashL" style="
+                                                  display: none;
+                                                  opacity: 1;
+                                                  vector-effect: none;
+                                                  fill: #d3cbcb;
+                                                  stroke-linecap: round;
+                                                  transform: scale(1.3)
+                                                             rotate(5deg)
+                                                             translateX(87px)
+                                                             translateY(68px);
+                                                  transform-origin: center;"
+                                                  d="m 61.556922,129.13801 v 5.1e-4 a 2,2 0 0 0 -1.412317,0.58963 2,2 0 0 0 0.01188,2.82825 l 17.201532,17.07855 c -1.98301,1.01223 -3.91786,2.10428 -5.79551,3.27887 a 2,2 0 0 0 -0.13694,-0.1509 L 53.398763,134.86685 a 2,2 0 0 0 -2.828251,0.0119 2,2 0 0 0 0.0098,2.82825 l 17.592211,17.4625 c -1.80546,1.27765 -3.5485,2.63986 -5.22087,4.08916 L 45.060771,141.49591 a 2,2 0 0 0 -1.415934,-0.58033 2,2 0 0 0 -1.412317,0.59015 2,2 0 0 0 0.0098,2.8298 l 17.767391,17.63665 c -2.267488,2.22655 -4.379236,4.63531 -6.310209,7.2347 a 1.4,1.4 0 0 0 0.288871,1.95698 1.4,1.4 0 0 0 1.956987,-0.28938 c 12.692584,-17.08617 33.797574,-25.72294 55.535112,-28.19312 15.21165,-1.72859 30.64622,-0.36176 43.60354,3.09749 a 1.4,1.4 0 0 0 0.29507,0.59015 l 15.00012,4.99969 1.07022,-2.57969 c -11.50044,-5.75022 -27.13923,-9.29966 -43.63093,-9.64695 -5.49723,-0.11576 -11.08867,0.12564 -16.65428,0.75809 -10.35145,1.1763 -20.623178,3.72163 -29.989388,7.90959 a 2,2 0 0 0 -0.17466,-0.19688 l -18.02526,-17.89452 a 2,2 0 0 0 -1.418,-0.58032 z">
+                                                </path>
 					<!-- Eye Ball -->
 						<g class="eyeball blink">
 							<!-- Sclera (White part) -->
@@ -225,37 +207,19 @@ z"></path>
 							<rect x="317" y="173" width="190" height="174" rx="80" fill="#000000"/>
 						</g>
 						<!-- Eyelashes (hidden by default) -->
-<path class="eyelash" style="
-display: block;
-opacity: 1;
-vector-effect: none;
-fill: #d3cbcb;
-stroke-linecap: round;
-transform: scaleX(-1) scale(1.83) rotate(10.3deg) translateX(100px) translateY(102px);
-transform-origin: center;
-" d="m 61.556922,129.13801
-v 5.1e-4
-a 2,2 0 0 0 -1.412317,0.58963 2,2 0 0 0 0.01188,2.82825
-l 17.201532,17.07855
-c -1.98301,1.01223 -3.91786,2.10428 -5.79551,3.27887
-a 2,2 0 0 0 -0.13694,-0.1509
-L 53.398763,134.86685
-a 2,2 0 0 0 -2.828251,0.0119 2,2 0 0 0 0.0098,2.82825
-l 17.592211,17.4625
-c -1.80546,1.27765 -3.5485,2.63986 -5.22087,4.08916
-L 45.060771,141.49591
-a 2,2 0 0 0 -1.415934,-0.58033 2,2 0 0 0 -1.412317,0.59015 2,2 0 0 0 0.0098,2.8298
-l 17.767391,17.63665
-c -2.267488,2.22655 -4.379236,4.63531 -6.310209,7.2347
-a 1.4,1.4 0 0 0 0.288871,1.95698 1.4,1.4 0 0 0 1.956987,-0.28938
-c 12.692584,-17.08617 33.797574,-25.72294 55.535112,-28.19312 15.21165,-1.72859 30.64622,-0.36176 43.60354,3.09749
-a 1.4,1.4 0 0 0 0.29507,0.59015
-l 15.00012,4.99969 1.07022,-2.57969
-c -11.50044,-5.75022 -27.13923,-9.29966 -43.63093,-9.64695 -5.49723,-0.11576 -11.08867,0.12564 -16.65428,0.75809 -10.35145,1.1763 -20.623178,3.72163 -29.989388,7.90959
-a 2,2 0 0 0 -0.17466,-0.19688
-l -18.02526,-17.89452
-a 2,2 0 0 0 -1.418,-0.58032
-z"></path>
+                                                <path class="eyelashR" style="
+                                                  display: none;
+                                                  opacity: 1;
+                                                  vector-effect: none;
+                                                  fill: #d3cbcb;
+                                                  stroke-linecap: round;
+                                                  transform: scale(1.3)
+                                                             scaleX(-1)
+                                                             rotate(5deg)
+                                                             translateX(87px)
+                                                             translateY(68px);
+                                                  transform-origin: center;"
+                                                  d="m 61.556922,129.13801 v 5.1e-4 a 2,2 0 0 0 -1.412317,0.58963 2,2 0 0 0 0.01188,2.82825 l 17.201532,17.07855 c -1.98301,1.01223 -3.91786,2.10428 -5.79551,3.27887 a 2,2 0 0 0 -0.13694,-0.1509 L 53.398763,134.86685 a 2,2 0 0 0 -2.828251,0.0119 2,2 0 0 0 0.0098,2.82825 l 17.592211,17.4625 c -1.80546,1.27765 -3.5485,2.63986 -5.22087,4.08916 L 45.060771,141.49591 a 2,2 0 0 0 -1.415934,-0.58033 2,2 0 0 0 -1.412317,0.59015 2,2 0 0 0 0.0098,2.8298 l 17.767391,17.63665 c -2.267488,2.22655 -4.379236,4.63531 -6.310209,7.2347 a 1.4,1.4 0 0 0 0.288871,1.95698 1.4,1.4 0 0 0 1.956987,-0.28938 c 12.692584,-17.08617 33.797574,-25.72294 55.535112,-28.19312 15.21165,-1.72859 30.64622,-0.36176 43.60354,3.09749 a 1.4,1.4 0 0 0 0.29507,0.59015 l 15.00012,4.99969 1.07022,-2.57969 c -11.50044,-5.75022 -27.13923,-9.29966 -43.63093,-9.64695 -5.49723,-0.11576 -11.08867,0.12564 -16.65428,0.75809 -10.35145,1.1763 -20.623178,3.72163 -29.989388,7.90959 a 2,2 0 0 0 -0.17466,-0.19688 l -18.02526,-17.89452 a 2,2 0 0 0 -1.418,-0.58032 z"></path>
 						<g class="eyeball blink">
 							<g class="sclera">
 								<circle cx="400" cy="260" r="71" fill="var(--sclera-outer-glow)" filter="url(#scleraOuterGlow)"/>
